# AIRiskAssessmentProject

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
architecture/: project-architecture.md
data/: ai_inventory.yaml  findings.yaml  gaps.yaml  organization.yaml  roadmap.yaml
data/assessments/: eu_ai_act.yaml  nist_ai_rmf.yaml
evidence/: README.md  draft-ai-acceptable-use-policy.md  support-chatbot-sop.md  vendor-risk-assessment-partial.md  vendor-talentsift-datasheet.md
frameworks/: eu_ai_act.yaml  nist_ai_rmf.yaml
reports/: final-report.md  scorecard.md
src/airisk/: __init__.py  chart.py  cli.py  loaders.py  models.py  report.py  scoring.py
src/airisk/templates/: final-report.md.j2  scorecard.md.j2
tasks/: lessons.md  todo.md
tests/: conftest.py  test_end_to_end.py  test_models.py  test_scoring.py
vault/: README.md  architecture-decisions.md  architecture-overview.md  messaging-and-framing.md  methodology-and-depth.md  phase1-foundations.md  phase2-engine.md  phase2-plan.md  phase3-assessment.md  phase3-plan.md  phase4-plan.md  phase4-showcase.md  project-overview.md
