[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airisk"
version = "0.1.0"
description = "AI governance risk assessment scoring engine + report generator (FakeOrg synthetic demo)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.5",
  "pyyaml>=6.0",
  "typer>=0.12",
  "jinja2>=3.1",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
airisk = "airisk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/airisk"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
